Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-140676

Anonymous enum representation inconsistent in members list

XMLWordPrintable

    • c033ea663 (dev)
    • DaVinci 127

      In member lists, anonymous enums are displayed as simple links without names, as shown on https://doc-snapshots.qt.io/qt6-dev/qgraphicsobject-members.html

      However, if the class containing the enum is in a different module, the representation is different, as shown on https://doc-snapshots.qt.io/qt6-dev/qgraphicssvgitem-members.html

      The solution to this issue is to preserve the anonymous flag in index files.

        For Gerrit Dashboard: QTBUG-140676
        # Subject Branch Project Status CR V

            david.boddie David Boddie
            david.boddie David Boddie
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes