QDoc: Record anonymous enums correctly in index files

Anonymous enums were not recorded fully in index files, leading to cases
where an enum from one module could be incorrectly represented as a
named enum in another.

Fixes: QTBUG-140676
Change-Id: I4660e568c6ba5e117a27577c0ed274c2157caec9
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>